# ferrox

./: .env  .env.test  .gitignore  Cargo.toml
backend/ferrox_auth/: Cargo.toml
backend/ferrox_auth/src/: authenticated.rs  lib.rs  login.rs  permissions.rs  roles.rs
backend/ferrox_core/: Cargo.toml
backend/ferrox_core/src/: cors.rs  db.rs  db_types.rs  lib.rs  mailer.rs  url_generator.rs
backend/ferrox_core/src/auth/: authenticated.rs  login.rs  roles.rs
backend/ferrox_db/: Cargo.toml
backend/ferrox_db/src/: lib.rs
backend/ferrox_db_types/: Cargo.toml
backend/ferrox_db_types/src/: lib.rs
backend/ferrox_env/: Cargo.toml
backend/ferrox_env/src/: lib.rs
backend/ferrox_mailer/: Cargo.toml
backend/ferrox_mailer/src/: lib.rs
backend/ferrox_sentry/: Cargo.toml
backend/ferrox_sentry/src/: lib.rs
backend/flust_core/: Cargo.toml
backend/flust_core/src/: cors.rs  lib.rs  std_response.rs  url_generator.rs
backend/flust_core/src/auth/: login.rs  permissions.rs  roles.rs
backend/flust_sentry/: Cargo.toml
backend/flust_sentry/src/: lib.rs
frontend/ferrox_frontend_core/: pubspec.yaml
frontend/ferrox_frontend_core/lib/: flust_frontend_core.dart
frontend/ferrox_frontend_core/lib/api/: backend_api.dart  backend_request.dart  method.dart  std_response.g.dart
frontend/ferrox_frontend_core/lib/api/url/: url_stub.dart  url_web.dart
frontend/flust_frontend_core/: pubspec.yaml
frontend/flust_frontend_core/lib/: flust_frontend_core.dart
frontend/flust_frontend_core/lib/api/: backend_api.dart  backend_request.dart  std_response.dart
frontend/flust_frontend_core/lib/api/url/: url_io.dart
frontend/flust_frontend_core/test/: flust_frontend_core_test.dart
