[workspace]
members = ["backend/*"]
resolver = "2"

[workspace.dependencies]
# Own crates
ferrox_core = { path = "backend/ferrox_core", version = "0.1.0" }
ferrox_sentry = { path = "backend/ferrox_sentry", version = "0.1.0" }
ferrox_env = { path = "backend/ferrox_env", version = "0.1.0" }
ferrox_mailer = { path = "backend/ferrox_mailer", version = "0.1.0" }
ferrox_auth = { path = "backend/ferrox_auth", version = "0.1.0" }
ferrox_db = { path = "backend/ferrox_db", version = "0.1.0" }
ferrox_db_types = { path = "backend/ferrox_db_types", version = "0.1.0" }

# External
rocket = "^0.5"
diesel = "^2.2"
diesel_migrations = "^2.2"
diesel-async = "^0.5"
deadpool = "^0.12"
serde = "^1.0"
serde_json = "^1.0"
dotenvy = "^0.15"
log = "^0.4"
lettre = "^0.11"
uuid = "^1.10"
time = "^0.3"
jwt = "^0.16"
hmac = "^0.12"
sha2 = "^0.10"
argon2 = "^0.5"
rand = "^0.8"
sentry = "^0.34"