[package]
name = "ferrox_core"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true, features = ["postgres"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rocket = { workspace = true, features = ["secrets"] }
lettre = { workspace = true }
deadpool = { workspace = true }
diesel-async = { workspace = true, features = ["postgres", "deadpool", "async-connection-wrapper"] }
uuid = { workspace = true }
time = { workspace = true, features = ["serde"] }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }

ferrox_sentry = { workspace = true, optional = true }
ferrox_env = { workspace = true, optional = true }
ferrox_mailer = { workspace = true, optional = true }

[dev-dependencies]
ferrox_env = { workspace = true }

[features]
default = []
sentry = ["dep:ferrox_sentry"]
env = ["dep:ferrox_env"]
mailer = ["dep:ferrox_mailer"]