[package]
name = "ferrox_core"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rocket = { workspace = true, features = ["secrets"] }

ferrox_sentry = { workspace = true, optional = true }
ferrox_env = { workspace = true, optional = true }
ferrox_mailer = { workspace = true, optional = true }
ferrox_auth = { workspace = true, optional = true }
ferrox_db = { workspace = true, optional = true }

[dev-dependencies]
ferrox_env = { workspace = true }

[features]
default = []
sentry = ["dep:ferrox_sentry"]
env = ["dep:ferrox_env"]
mailer = ["dep:ferrox_mailer"]
auth = ["dep:ferrox_auth"]
db = ["dep:ferrox_db"]