[package]
name = "ferrox_db"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true, features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
deadpool = { workspace = true }

[dev-dependencies]
ferrox_env = { workspace = true }
